--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -2,9 +2,16 @@
 	<% @restaurants.each do |restaurant| %>
 		<h2><%= link_to "#{restaurant.name}", restaurant_path(restaurant) %></h2>
 		<p><%= link_to "Edit #{restaurant.name}", edit_restaurant_path(restaurant) %></p>
+		<p><%= link_to "Delete #{restaurant.name}", restaurant_path(restaurant), method: :delete %>
 	<% end %>	
 <% else %>
 		No restaurants yet!
+<% end %>
+
+<% if flash[:notice] %>
+<div id="notice">
+<%= flash[:notice] %>
+</div>
 <% end %>
 
 <a href='/restaurants/new'>Add a restaurant</a>
