--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -2,7 +2,19 @@
 	<% @restaurants.each do |restaurant| %>
 		<h2><%= link_to "#{restaurant.name}", restaurant_path(restaurant) %></h2>
 		<p><%= link_to "Edit #{restaurant.name}", edit_restaurant_path(restaurant) %></p>
-		<p><%= link_to "Delete #{restaurant.name}", restaurant_path(restaurant), method: :delete %>
+		<p><%= link_to "Review #{restaurant.name}", new_restaurant_review_path(restaurant) %></p>
+		<p><%= link_to "Delete #{restaurant.name}", restaurant_path(restaurant), method: :delete %></p>
+		<% if restaurant.reviews.any? %>
+  <ul>
+    <% restaurant.reviews.each do |review| %>
+      <li>
+        <%= review.thoughts %>, <strong><%= review.rating %></strong>/5
+      </li>
+    <% end %>
+  </ul>
+<% else %>
+  <p>No reviews.</p>
+<% end %>
 	<% end %>	
 <% else %>
 		No restaurants yet!
