--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -1,3 +1,17 @@
 <h1><%= @restaurant.name %></h1>
 <p><%= @restaurant.description %></p>
 <p><%= @restaurant.rating %></p>
+
+<h3>Reviews for <%= @restaurant.name %></h3>
+
+<% if @restaurant.reviews.any? %>
+  <ul>
+    <% @restaurant.reviews.each do |review| %>
+      <li>
+        <%= review.thoughts %>, <strong><%= review.rating %></strong>/5
+      </li>
+    <% end %>
+  </ul>
+<% else %>
+  <p>No reviews.</p>
+<% end %>
