--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -1,9 +1,11 @@
 <% if @restaurants.any? %>
 	<% @restaurants.each do |restaurant| %>
 		<h2><%= link_to "#{restaurant.name}", restaurant_path(restaurant) %></h2>
+		<% if can? :update, restaurant %>
 		<p><%= link_to "Edit #{restaurant.name}", edit_restaurant_path(restaurant) %></p>
-		<p><%= link_to "Review #{restaurant.name}", new_restaurant_review_path(restaurant) %></p>
 		<p><%= link_to "Delete #{restaurant.name}", restaurant_path(restaurant), method: :delete %></p>
+		<% end %>
+		<p><%= link_to "Review #{restaurant.name}", new_restaurant_review_path(restaurant) %></p>
 		<% if restaurant.reviews.any? %>
   <ul>
     <% restaurant.reviews.each do |review| %>
