--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -17,7 +17,7 @@
         <%= review.thoughts %>, <strong><%= review.rating %></strong>/5
       </li>
     <% end %>
-	      <h3>Average rating: <%= star_rating(restaurant.average_rating) %></h3>
+	      <h3>Average rating: <%= star_rating(restaurant.average_rating.to_i) %></h3>
   </ul>
 <% else %>
   <p>No reviews.</p>
