--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -9,6 +9,7 @@
     <% @restaurant.reviews.each do |review| %>
       <li>
         <%= review.thoughts %>, <strong><%= review.rating %></strong>/5
+        <%= review.endorsements.count %> endorsements
       </li>
     <% end %>
   </ul>
