--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -1,6 +1,7 @@
 <% if @restaurants.any? %>
 	<% @restaurants.each do |restaurant| %>
 		<h2><%= link_to "#{restaurant.name}", restaurant_path(restaurant) %></h2>
+		<%= image_tag restaurant.image.url(:thumb) %>
 		<% if can? :update, restaurant %>
 		<p><%= link_to "Edit #{restaurant.name}", edit_restaurant_path(restaurant) %></p>
 		<p><%= link_to "Delete #{restaurant.name}", restaurant_path(restaurant), method: :delete %></p>
