--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -16,11 +16,12 @@
 			<ul>
 			  <% restaurant.reviews.each do |review| %>
 			    <li>
-			      <%= review.thoughts %> Average rating: <%= star_rating(restaurant.average_rating) %>
+			      <%= review.thoughts %> 
 			        <%= link_to "Endorse", review_endorsements_path(review), class: 'endorsements-link' %>
 			        <span class="endorsements_count"> <%= review.endorsements.count %> </span> endorsements
 			    </li>
 			  <% end %>
+			    Average rating: <%= star_rating(restaurant.average_rating) %>
 			</ul>
 <% else %>
   <p>No reviews.</p>
